albc/automode/ingress/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-load-balancer-controller-ingress
  namespace: istio-system
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-port: '31234'
    alb.ingress.kubernetes.io/healthcheck-path: '/healthz/ready'
    alb.ingress.kubernetes.io/security-groups: 'nautible-dev-cluster-v1_34-albc-sg' # FIXME 対象のセキュリティグループに変更する。idまたは名称を指定する。
spec:
  ingresssClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
